--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
     <string name="app_name">WeatherMe!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_refresh">Refresh</string>
 
-    <string name="fab_actionText">Refresh</string>
-    <string name="fab_actionMessage">Refresh not implemented yet</string>
+    <string name="fab_messageText">Refresh not implemented yet</string>
 
-    <string name="dummyTitle">Today, November 18</string>
-    <string name="dummyHighTemp">15°</string>
+    <string name="dummyTitle">Today:\nSaturday, November 20</string>
+    <string name="dummyHighTemp">16°</string>
     <string name="dummyLowTemp">4°</string>
     <string name="dummyIconDesc">Weather Icon</string>
-    <string name="dummyStatus">Mostly Sunny</string>
+    <string name="dummyStatus">Partly Cloudy</string>
 
 </resources>
