--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
 
-    <string name="fab_messageText">Refresh not implemented yet</string>
+    <string name="snackbar_fab_message">Refresh not implemented yet</string>
+    <string name="snackbar_refresh_message">Downloading weather data…</string>
 
     <string name="dummyTitle">Today:\nSaturday, November 20</string>
     <string name="dummyHighTemp">16°</string>
